Small fixes for button alignment

--- a/styles.css
+++ b/styles.css
@@ -25,7 +25,7 @@ header h3 {
     background-color: #BFBAB8;
     border: none;
     color: white;
-    width: 99%;
+    width: 99.1%;
     text-align: center;
     text-decoration: none;
     display: inline-block;
